[package]
name = "lsn"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"
keywords = ["ls", "numbered", "command"]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help", "cargo"] }
regex = "1"
glob = "0.3"
walkdir = "2"
indexmap = "2"
chrono = "0.4.31"
colored = "2.0.4"
